fix: OPTIC-101: Project pagination copy is cut off on LS when user opens project and navigates back to Projects page

--- a/web/apps/labelstudio/src/components/Pagination/Pagination.styl
+++ b/web/apps/labelstudio/src/components/Pagination/Pagination.styl
@@ -140,3 +140,4 @@
   &__page-size
     min-width 150px
     padding-left 16px
+    box-sizing content-box
